--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,15 @@
 <div class="App">
+    <h1 class="App__title">@angular/cdk 예제</h1>
+
     <ul role="tablist" class="App__examples">
         <li role="tab">
-            <a routerLink="/modal-with-focus-trap">모달</a>
+            <a routerLink="/dialog" routerLinkActive="active">다이얼로그</a>
         </li>
         <li role="tab">
-            <a routerLink="/tooltip-with-focus-monitor">툴팁</a>
+            <a routerLink="/tooltip-with-focus-monitor" routerLinkActive="active">툴팁</a>
         </li>
         <li role="tab">
-            <a routerLink="/menu-with-key-manager">메뉴</a>
+            <a routerLink="/menu-with-key-manager" routerLinkActive="active">메뉴</a>
         </li>
     </ul>
 
