--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,9 @@ $font-family-sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 
 body {
     font-family: $font-family-sans-serif;
     font-size: 14px;
+    font-weight: 400;
     line-height: 1.5;
+    color: #212529;
 }
 
 input, select, option, blockquote, textarea {
