툴팁 예제 추가

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,7 @@
             <a routerLink="/dialog" routerLinkActive="active">다이얼로그</a>
         </li>
         <li role="tab">
-            <a routerLink="/tooltip-with-focus-monitor" routerLinkActive="active">툴팁</a>
-        </li>
-        <li role="tab">
-            <a routerLink="/menu-with-key-manager" routerLinkActive="active">메뉴</a>
+            <a routerLink="/tooltip" routerLinkActive="active">툴팁</a>
         </li>
     </ul>
 
