메뉴 예제 추가

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,9 @@
         <li role="tab">
             <a routerLink="/tooltip" routerLinkActive="active">툴팁</a>
         </li>
+        <li role="tab">
+            <a routerLink="/menu" routerLinkActive="active">메뉴</a>
+        </li>
     </ul>
 
     <div class="App__content">
